Add EDA notebook for Google Play Store cleaned data

--- a/Projects-on-Data-cleaning-E.D.A &-Feature-engineering/E.D.A-(Exploratory-data-analysis)/E.D.A -on-google-playstore-cleaned-data.ipynb
+++ b/Projects-on-Data-cleaning-E.D.A &-Feature-engineering/E.D.A-(Exploratory-data-analysis)/E.D.A -on-google-playstore-cleaned-data.ipynb
@@ -663,7 +663,7 @@
    "id": "a6247f9d",
    "metadata": {},
    "source": [
-    "As we can see data cleaned well"
+    "As we can see, the data is clean"
    ]
   },
   {
